--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,3 +27,13 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
+@media only screen and (max-width: 600px) {
+  .navbar-menu {
+   overflow:hidden;
+  }
+}
+@media only screen and (min-width: 600px) {
+  .navbar-burger {
+   overflow:hidden;
+  }
+}
